# OpenGLRender

./: CMakeLists.txt  build_vs2019.bat
GLFW/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
GLFW/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
GLUS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLUS.sln  GLUS.vcxproj  GLUS.vcxproj.filters  cmake_install.cmake
GLUS/GLUS.dir/Debug/GLUS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  GLUS.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/Debug/: GLUS.lib
src/: main.c
